--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<artifactId>tamacat-oidc-rp</artifactId>
 	<version>1.4</version>
 	<packaging>jar</packaging>
-	<name>tamacat-mvc OpenID Connect Relying Party</name>
+	<name>tamacat OpenID Connect Relying Party</name>
 	<url>https://tamacat.org/</url>
 
 	<licenses>
@@ -141,6 +141,19 @@
 			</plugin>
 		</plugins>
 	</build>
+
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jxr-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>cobertura-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</reporting>
 
 	<repositories>
 		<repository>
